// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Instagram Post Block should render Default 1`] = `
<DocumentFragment>
  <div
    class="emotion-0 emotion-1"
  />
</DocumentFragment>
`;

exports[`Instagram Post Block should render WithClassName 1`] = `
<DocumentFragment>
  <div
    class="extra-classname emotion-0 emotion-1"
  />
</DocumentFragment>
`;
